# invenio-records-rest

./: .editorconfig  .env  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  babel.ini  cookiecutter.json  docker-compose.yml  docker-services.yml  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  requirements.txt  usage.rst
examples/: app-setup.sh  app-teardown.sh  app.py  requirements.txt
examples/data/v2/: __init__.py
examples/data/v7/testrecords/: testrecord-v1.0.0.json
hooks/: post_gen_project.sh
invenio_records_rest/: __init__.py  _compat.py  config.py  config_loader.py  errors.py  ext.py  facets.py  links.py  memento.py  proxies.py  query.py  restful.py  serializers.py  sorter.py  utils.py  version.py  views.py
invenio_records_rest/loaders/: __init__.py  marshmallow.py
invenio_records_rest/schemas/: __init__.py  json.py
invenio_records_rest/schemas/fields/: __init__.py  datetime.py  generated.py  marshmallow_contrib.py  persistentidentifier.py  sanitizedhtml.py  sanitizedunicode.py  trimmedstring.py
invenio_records_rest/serializers/: __init__.py  base.py  citeproc.py  csv.py  datacite.py  dc.py  json.py  jsonld.py  marshmallow.py  response.py
invenio_records_rest/serializers/fields/: sanitizedunicode.py
invenio_records_rest/serializers/loaders/: __init__.py
invenio_records_rest/serializers/schemas/: __init__.py  json.py
invenio_records_rest/translations/: messages.pot
invenio_records_rest/translations/ar/LC_MESSAGES/: messages.po
invenio_records_rest/translations/bg/LC_MESSAGES/: messages.po
invenio_records_rest/translations/ca/LC_MESSAGES/: messages.po
invenio_records_rest/translations/cs/LC_MESSAGES/: messages.po
invenio_records_rest/translations/da/LC_MESSAGES/: messages.po
invenio_records_rest/translations/de/LC_MESSAGES/: messages.po
invenio_records_rest/translations/el/LC_MESSAGES/: messages.po
invenio_records_rest/translations/en/LC_MESSAGES/: messages.po
invenio_records_rest/translations/es/LC_MESSAGES/: messages.po
invenio_records_rest/translations/et/LC_MESSAGES/: messages.po
invenio_records_rest/translations/fa/LC_MESSAGES/: messages.po
invenio_records_rest/translations/fi/LC_MESSAGES/: messages.po
invenio_records_rest/translations/fr/LC_MESSAGES/: messages.po
invenio_records_rest/translations/hr/LC_MESSAGES/: messages.po
invenio_records_rest/translations/hu/LC_MESSAGES/: messages.po
invenio_records_rest/translations/it/LC_MESSAGES/: messages.po
invenio_records_rest/translations/ja/LC_MESSAGES/: messages.po
invenio_records_rest/translations/ka/LC_MESSAGES/: messages.po
invenio_records_rest/translations/ko/LC_MESSAGES/: messages.po
invenio_records_rest/translations/lt/LC_MESSAGES/: messages.po
invenio_records_rest/translations/no/LC_MESSAGES/: messages.po
invenio_records_rest/translations/pl/LC_MESSAGES/: messages.po
invenio_records_rest/translations/pt/LC_MESSAGES/: messages.po
invenio_records_rest/translations/ro/LC_MESSAGES/: messages.po
invenio_records_rest/translations/ru/LC_MESSAGES/: messages.po
invenio_records_rest/translations/sk/LC_MESSAGES/: messages.po
invenio_records_rest/translations/sv/LC_MESSAGES/: messages.po
invenio_records_rest/translations/tr/LC_MESSAGES/: messages.po
invenio_records_rest/translations/uk/LC_MESSAGES/: messages.po
invenio_records_rest/translations/zh-Hant/LC_MESSAGES/: messages.po
invenio_records_rest/translations/zh_CN/LC_MESSAGES/: messages.po
invenio_records_rest/translations/zh_TW/LC_MESSAGES/: messages.po
tests/: access_records.py  conftest.py  helpers.py  permissions.py  test_custom_endpoints.py  test_custom_fields.py  test_error_handlers.py  test_es_boosting.py  test_examples_app.py  test_ext.py  test_facets.py  test_index_prefixing.py  test_invenio_records_rest.py  test_links.py  test_marshmallow_contrib.py  test_marshmallow_loader.py  test_memento.py  test_permissions.py  test_pid_resolver.py  test_query.py  test_search.py  test_serializer_base.py  test_serializer_citeproc.py  test_serializer_csv.py  test_serializer_datacite.py  test_serializer_dc.py  test_serializer_json.py  test_serializer_jsonld.py  test_serializer_marshmallow.py  test_serializer_response.py  test_serializers.py  test_serializers_dc.py  test_sorter.py  test_utils.py  test_views_item_delete.py  test_views_item_get.py  test_views_item_patch.py  test_views_item_put.py  test_views_list_post.py  test_views_options.py  (+3 more)
tests/data/: testrecords.json
tests/data/testrecords/: testrecord-v1.0.0.json
tests/mappings/: __init__.py
tests/mock_module/: __init__.py
tests/mock_module/mappings/: __init__.py
tests/mock_module/mappings/os-v1/: __init__.py
tests/mock_module/mappings/os-v2/: __init__.py
tests/mock_module/mappings/v5/: __init__.py
tests/mock_module/mappings/v7/: __init__.py
{{cookiecutter.project_shortname}}/: .editorconfig  .travis.yml  CONTRIBUTING.rst  INSTALL.rst  README.rst  setup.cfg  setup.py
{{cookiecutter.project_shortname}}/docs/: index.rst  make.bat
{{cookiecutter.project_shortname}}/misc/: header.rst
{{cookiecutter.project_shortname}}/tests/: conftest.py
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/: __init__.py  config.py  ext.py
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/jsonschemas/: __init__.py
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/loaders/: __init__.py  errors.py  json.py
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/mappings/: __init__.py
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/marshmallow/: __init__.py  json.py
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/serializers/: __init__.py  json.py
(+15 files in other folders)
