# SPDX-FileCopyrightText: 2015-2018 CERN.
# SPDX-FileCopyrightText: 2017 RERO.
# SPDX-FileCopyrightText: 2022-2026 Graz University of Technology.
# SPDX-FileCopyrightText: 2025 KTH Royal Institute of Technology.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-records-rest"
description = "REST API for invenio-records."
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "api",
  "invenio",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "bleach>=2.1.3",
  "ftfy>=4.4.3",
  "invenio-base>=2.0.0,<3.0.0",
  "invenio-i18n>=4.0.0,<5.0.0",
  "invenio-indexer>=6.0.0,<7.0.0",
  "invenio-pidstore>=4.0.0,<5.0.0",
  "invenio-records>=6.0.0,<7.0.0",
  "invenio-rest>=4.0.0,<5.0.0",
  "marshmallow-utils>=0.15.0,<1.0.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-records-rest"

[project.entry-points."invenio_base.api_apps"]
invenio_records_rest = "invenio_records_rest:InvenioRecordsREST"

[project.entry-points."invenio_base.api_blueprints"]
invenio_records_rest = "invenio_records_rest.views:create_blueprint_from_app"

[project.entry-points."invenio_base.api_converters"]
pid = "invenio_records_rest.utils:PIDConverter"
pidpath = "invenio_records_rest.utils:PIDPathConverter"

[project.entry-points."invenio_base.converters"]
pid = "invenio_records_rest.utils:PIDConverter"
pidpath = "invenio_records_rest.utils:PIDPathConverter"

[project.entry-points."invenio_i18n.translations"]
messages = "invenio_records_rest"

[project.optional-dependencies]
citeproc = [
  "citeproc-py-styles>=0.1.3",
  "citeproc-py>=0.6.0",
]
datacite = [
  "datacite>=1.0.1",
]
docs = []
dublincore = [
  "dcxml>=0.1.2",
]
elasticsearch7 = [
  "invenio-search[elasticsearch7]>=3.0.0,<4.0.0",
]
jsonld = [
  "pyld>=1.0.5,<2",
]
opensearch1 = [
  "invenio-search[opensearch1]>=3.0.0,<4.0.0",
]
opensearch2 = [
  "invenio-search[opensearch2]>=3.0.0,<4.0.0",
]
tests = [
  "citeproc-py-styles>=0.1.3",
  "citeproc-py>=0.6.0",
  "cryptography>=2.1.4",
  "datacite>=1.0.1",
  "dcxml>=0.1.2",
  "flask-login>=0.3.2",
  "invenio-config>=1.0.2,<2.0.0",
  "invenio-db[mysql,postgresql]>=2.2.0,<3.0.0",
  "mock>=4",
  "pyld>=1.0.5,<2",
  "pytest-black>=0.6.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "sphinx>=4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_records_rest/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_records_rest/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_records_rest/translations/messages.pot"
output_dir = "invenio_records_rest/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_records_rest/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_records_rest",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_records_rest --cov-report=term-missing'
testpaths = "tests invenio_records_rest"
live_server_scope = "module"

# UV needs to be told explicitly which extras are conflicting:
# https://docs.astral.sh/uv/concepts/projects/config/#conflicting-dependencies
[tool.uv]
conflicts = [
  [
    { extra = "opensearch1" },
    { extra = "opensearch2" },
    { extra = "elasticsearch7" },
  ]
]
